# zephyr

./: CMakeLists.txt  west.yml
arch/: Kconfig
boards/arm/mimxrt1050_evk/: Kconfig.defconfig
boards/arm/mimxrt1060_evk/: Kconfig.defconfig
boards/posix/native_posix/: CMakeLists.txt  Kconfig  Kconfig.defconfig  dts_fixup.h  fuse_flash.c  native_posix.dts  sdl_events.c
boards/posix/native_posix/doc/: board.rst  index.rst
boards/posix/nrf52_bsim/: nrf52_bsim.dts
drivers/: CMakeLists.txt
drivers/bluetooth/hci/: Kconfig  spi.c
drivers/display/: Kconfig.ili9340  display_ili9340.c  ssd1673.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.native_posix  flash_native_posix.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.sdl  Kconfig.sdl_scan_codes  Kconfig.sdl_switch_types  gpio_sdl.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/tsl2591/: CMakeLists.txt  Kconfig  tsl2591.c  tsl2591.h
drivers/serial/: Kconfig.native_posix  uart_native_posix.c
dts/bindings/posix/: zephyr,posix.yaml
ext/: Kconfig
ext/lib/: CMakeLists.txt
ext/lib/gui/lvgl/: CMakeLists.txt  Kconfig  Kconfig.fonts  Kconfig.objects  Kconfig.themes  README  lv_conf.h  lvgl.c  lvgl_color.h  lvgl_color_1.c  lvgl_color_16.c  lvgl_color_32.c  lvgl_color_8.c  lvgl_fs.c  lvgl_fs.h  lvgl_mem_kernel.c  lvgl_mem_user.c
include/: device.h  display.h  fs.h
include/arch/posix/: arch.h
include/debug/: zlsan.h
include/drivers/display/: ili9340.h
include/drivers/gpio/: gpio_sdl.h
include/gui/: lvgl_mem.h
include/logging/: log.h  log_instance.h
include/net/: buf.h  net_core.h  net_if.h  net_l2.h
include/shell/: shell.h
include/toolchain/: common.h  llvm.h
include/usb/: bos.h  usb_device.h
lib/gui/: CMakeLists.txt  Kconfig
lib/gui/lvgl/: Kconfig
lib/gui/lvgl_common/: CMakeLists.txt  Kconfig  Kconfig.fonts  Kconfig.objects  Kconfig.themes  lvgl_fs.c  lvgl_fs.h
lib/gui/lvgl_v5/: Kconfig  Kconfig.fonts  lv_conf.h  lvgl.c  lvgl_fs.c
lib/gui/lvgl_v6/: CMakeLists.txt  Kconfig  Kconfig.fonts  Kconfig.objects  lv_conf.h  lvgl.c  lvgl_display.h  lvgl_fs.c
modules/: Kconfig.backward-cpp
samples/: samples.rst
samples/bluetooth/mesh/: prj_bbc_microbit.conf
samples/bluetooth/mesh_demo/: prj_bbc_microbit.conf
samples/display/ili9340/: README.rst  prj.conf  sample.yaml
samples/display/ili9340/src/: main.c
samples/gui/lvgl/: sample.yaml
samples/gui/lvgl_keypad/: CMakeLists.txt  README.rst  nrf52840_pca10056.overlay  prj.conf  sample.yaml
samples/gui/lvgl_keypad/boards/: native_posix.conf  nrf52840_pca10056.conf
samples/gui/lvgl_keypad/src/: main.c
samples/sensor/tsl2591/: README.rst  prj.conf
samples/sensor/tsl2591/src/: main.c
samples/subsys/fs/: fs.rst
samples/subsys/fs/shell/: CMakeLists.txt  README.rst  prj.conf
samples/subsys/fs/shell/boards/: native_posix.conf
scripts/: sanitycheck
subsys/bluetooth/shell/: bt.c
subsys/debug/: CMakeLists.txt  Kconfig
subsys/debug/zlsan/: CMakeLists.txt  Kconfig  zlsan.cpp  zlsan.hpp  zlsan_k_mem_pool.cpp
subsys/debug/zlsan/llvm_pass/: CMakeLists.txt  zlsan_pass.cpp
subsys/fb/: cfb.c
subsys/fs/: fs.c
subsys/settings/: Kconfig
subsys/settings/src/: CMakeLists.txt  shell.c
subsys/testsuite/ztest/include/: ztest_mock.h
tests/bluetooth/mesh/: microbit.conf  microbit_gatt.conf
tests/lib/gui/lvgl/src/: main.c
tests/subsys/debug/zlsan/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/debug/zlsan/src/: main.c
tests/subsys/fs/fat_fs_api/: prj_native_posix.conf
tests/subsys/settings/fcb/base64/: prj_native_posix.conf
tests/subsys/settings/fcb/raw/: prj_native_posix.conf
tests/subsys/settings/nffs/base64/: prj_native_posix.conf
tests/subsys/settings/nffs/raw/: prj_native_posix.conf
tests/subsys/storage/flash_map/: testcase.yaml
